--- a/index.html
+++ b/index.html
@@ -8,6 +8,24 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type='text/javascript'>
+    function initEmbeddedMessaging() {
+        try {
+            embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
+
+            embeddedservice_bootstrap.init(
+                '00DFf000001csOb',
+                'test2',
+                'https://inspiration-business-717--forsysdev.sandbox.my.site.com/ESWtest21757507754565',
+                {
+                    scrt2URL: 'https://inspiration-business-717--forsysdev.sandbox.my.salesforce-scrt.com'
+                }
+            );
+        } catch (err) {
+            console.error('Error loading Embedded Messaging: ', err);
+        }
+    };
+</script>
+<script type='text/javascript' src='https://inspiration-business-717--forsysdev.sandbox.my.site.com/ESWtest21757507754565/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
   </body>
 </html>
