--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ProjectPilot</title>
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+        height: 100vh;
+        background: url("./organo.webp") no-repeat center center fixed;
+        background-size: cover; /* makes it fill the whole screen */
+        font-family: sans-serif;
+      }
   </head>
   <body>
     <div id="root"></div>
