--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         background-size: cover; /* makes it fill the whole screen */
         font-family: sans-serif;
       }
+      </style>
   </head>
   <body>
     <div id="root"></div>
