--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
             embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
 
             embeddedservice_bootstrap.init(
-                '00DFf000001csOb',
-                'test2',
-                'https://inspiration-business-717--forsysdev.sandbox.my.site.com/ESWtest21757507754565',
+                '00D710000032WlK',
+                'Organo_Website_Channel_For_Organo_Agent',
+                'https://inspiration-business-717--forsysuat.sandbox.my.site.com/ESWOrganoWebsiteChannel1758862951879',
                 {
-                    scrt2URL: 'https://inspiration-business-717--forsysdev.sandbox.my.salesforce-scrt.com'
+                    scrt2URL: 'https://inspiration-business-717--forsysuat.sandbox.my.salesforce-scrt.com'
                 }
             );
         } catch (err) {
@@ -36,6 +36,6 @@
         }
     };
 </script>
-<script type='text/javascript' src='https://inspiration-business-717--forsysdev.sandbox.my.site.com/ESWtest21757507754565/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
+<script type='text/javascript' src='https://inspiration-business-717--forsysuat.sandbox.my.site.com/ESWOrganoWebsiteChannel1758862951879/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
   </body>
 </html>
