--- a/index.html
+++ b/index.html
@@ -18,27 +18,24 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="text/javascript" src="https://inspiration-business-717--forsysuat.sandbox.my.site.com/ESWOrganoWebsiteChannel1758862951879/assets/js/bootstrap.min.js"></script>
-<script>
-  window.addEventListener("load", function() {
-    if (typeof embeddedservice_bootstrap !== "undefined") {
-      try {
-        embeddedservice_bootstrap.settings.language = "en_US";
-        embeddedservice_bootstrap.init(
-          "00D710000032WlK",
-          "Organo_Website_Channel_For_Organo_Agent",
-          "https://inspiration-business-717--forsysuat.sandbox.my.site.com/ESWOrganoWebsiteChannel1758862951879",
-          {
-            scrt2URL: "https://inspiration-business-717--forsysuat.sandbox.my.salesforce-scrt.com",
-          }
-        );
-      } catch (err) {
-        console.error("Error initializing Embedded Messaging:", err);
-      }
-    } else {
-      console.error("embeddedservice_bootstrap is not defined.");
-    }
-  });
+    <script type='text/javascript'>
+    function initEmbeddedMessaging() {
+        try {
+            embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
+
+            embeddedservice_bootstrap.init(
+                '00D710000032WlK',
+                'Organo_Website_Channel_For_Organo_Agent',
+                'https://inspiration-business-717--forsysuat.sandbox.my.site.com/ESWOrganoWebsiteChannel1758862951879',
+                {
+                    scrt2URL: 'https://inspiration-business-717--forsysuat.sandbox.my.salesforce-scrt.com'
+                }
+            );
+        } catch (err) {
+            console.error('Error loading Embedded Messaging: ', err);
+        }
+    };
 </script>
+<script type='text/javascript' src='https://inspiration-business-717--forsysuat.sandbox.my.site.com/ESWOrganoWebsiteChannel1758862951879/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
   </body>
 </html>
