--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
             embeddedservice_bootstrap.init(
                 '00D710000032WlK',
-                'Organo_Website_Channel_For_Organo_Agent',
-                'https://inspiration-business-717--forsysuat.sandbox.my.site.com/ESWOrganoWebsiteChannel1758862951879',
+                'Sample_Website',
+                'https://inspiration-business-717--forsysuat.sandbox.my.site.com/ESWSampleWebsite1760424411267',
                 {
                     scrt2URL: 'https://inspiration-business-717--forsysuat.sandbox.my.salesforce-scrt.com'
                 }
@@ -36,6 +36,6 @@
         }
     };
 </script>
-<script type='text/javascript' src='https://inspiration-business-717--forsysuat.sandbox.my.site.com/ESWOrganoWebsiteChannel1758862951879/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
+<script type='text/javascript' src='https://inspiration-business-717--forsysuat.sandbox.my.site.com/ESWSampleWebsite1760424411267/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
   </body>
 </html>
